# AI-trading-agents-with-ERC-8004-Hackathon

./: BUILDERS_COMPREHENSIVE_GUIDE.md  FINAL_CHECKLIST_AND_REVIEW.md  HACKATHON_TECHNICAL_SUMMARY.md  LABLAB_PAGE_UPDATE.md  README.md  ai-trading-agents-kraken-challenge.md  bankr-commands-cheatsheet.md  bankr-interview-prep.md
erc8004-agent-template/: .env.example  Cargo.toml  README.md  hardhat.config.js  package.json  requirements.txt
erc8004-agent-template/agent/: kraken_integration.py  kraken_skills_mapping.py  main.py  mcp_client.py  strategy.py
erc8004-agent-template/config/: kraken_services_config.json  mcp_config.json
erc8004-agent-template/contracts/: TradingAgent.sol
erc8004-agent-template/docs/: DOCUMENTATION_EXAMPLES.md
erc8004-agent-template/examples/: QUICK_START_EXAMPLES.md  kraken_mcp_examples.py  mcp_examples.rs  mcp_examples.ts
erc8004-agent-template/src/: agent.rs  config.rs  erc8004.rs  kraken.rs  lib.rs  main.rs  strategies.rs
erc8004-agent-template/tests/: contract_tests.py  test_examples.py
erc8004-agent-template/typescript/: package.json  tsconfig.json
erc8004-agent-template/typescript/src/: index.ts
erc8004-agent-template/typescript/src/config/: index.ts
erc8004-agent-template/typescript/src/kraken/: index.ts
erc8004-agent-template/typescript/src/types/: index.ts
